--- a/Lesson_2_Handout/templates/index.html
+++ b/Lesson_2_Handout/templates/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 d-sm-flex justify-content-sm-center">
                 
-                {{ posts }}
+                <!-- Add passed variable here -->
 
             </div>
         </div>
